api fixes
